<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="@android:color/holo_red_dark" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_sending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin_small"
        android:layout_marginTop="@dimen/common_margin_small"
        android:layout_marginEnd="@dimen/common_margin_small">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_subject"
            android:inputType="textEmailSubject" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin_small"
        android:layout_marginTop="@dimen/common_margin_small"
        android:layout_marginEnd="@dimen/common_margin_small">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/write"
            android:inputType="textWebEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_margin="@dimen/common_margin_small"/>


</LinearLayout>