<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewCity"
        style="@style/my_average_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewData"
        style="@style/my_small_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin_small"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCity"/>

    <ImageView
        android:id="@+id/imageViewWeatherIcon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewData" />

    <LinearLayout
        android:id="@+id/liner_ring"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:background="@drawable/ring"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="@dimen/common_margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewWeatherIcon">

        <TextView
            android:id="@+id/textViewTemperature"
            style="@style/my_big_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin_small"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/textViewDescription"
            style="@style/my_super_small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTemperature" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/favourites_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/common_margin"
        android:padding="15dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/addingToFavourite"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintTop_toBottomOf="@id/liner_ring"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <LinearLayout
        android:id="@+id/liner_for_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="@dimen/common_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/favourites_button"
        app:layout_constraintTop_toBottomOf="@id/liner_ring">

    <TextView
        android:id="@+id/textViewPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_pressure"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewPressureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/my_super_small_text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner_for_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="@dimen/common_margin"
        app:layout_constraintTop_toBottomOf="@id/liner_ring"
        app:layout_constraintStart_toEndOf="@id/favourites_button">

        <TextView
            android:id="@+id/textViewSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/window_speed_checkbox"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"/>

        <TextView
            android:id="@+id/textViewWindSpeedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/my_super_small_text"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>